@@ -275,8 +275,8 @@
 		<output>8 or 16-bit, WAV, raw or MP3, file or stdout</output>
 		<subsongs>yes</subsongs>
 		<file-info>no</file-info>
-		<edit-info>yes</edit-info>
-		<convert-sap>yes</convert-sap>
+		<edit-info>yes, multi-file</edit-info>
+		<convert-sap>yes, multi-file</convert-sap>
 		<config-time>yes</config-time>
 		<mute-pokey>yes</mute-pokey>
 		<lang>C</lang>
@@ -322,7 +322,7 @@
 		<output>N/A</output>
 		<subsongs>N/A</subsongs>
 		<file-info>yes</file-info>
-		<edit-info>only on Windows Vista and newer: AUTHOR, NAME, DATE (year)</edit-info>
+		<edit-info>only on Windows Vista and newer: AUTHOR, NAME, DATE (year), multi-file</edit-info>
 		<convert-sap>no</convert-sap>
 		<config-time>N/A</config-time>
 		<mute-pokey>N/A</mute-pokey>
